j--/tests/pass/ModAssign.java
package pass;

public class ModAssign {
	public int eval(int a, int b) {
		a %= b;
		return a;
	}
}
