j--/tests/fail/ModAssign.java
package fail;

public class ModAssign {

	public static void main(String args[]) {
		System.out.println("c" %= "b");
	}

}
